# FitSight-AI

./: .gitignore  README.md  pyproject.toml
data/: fitsight.db
fitness_coach/: dashboard.py  main.py
fitness_coach/analytics/: charts.py
fitness_coach/coaching/: coaching_agent.py  frame_buffer.py  speech_engine.py
fitness_coach/counters/: base.py  curl.py  pushup.py  squat.py
fitness_coach/form/: back_rounding.py  elbow_flare.py  error_buffer.py  knee_valgus.py
fitness_coach/geometry/: angles.py
fitness_coach/pipeline/: renderer.py
fitness_coach/pose/: landmarker.py
fitness_coach/reports/: pdf_export.py
fitness_coach/storage/: db.py  models.py
tests/: test_angles.py  test_frame_buffer.py
